--- a/css/mainSlider.css
+++ b/css/mainSlider.css
@@ -53,5 +53,12 @@
        }
        .swiper-button-prev , .swiper-button-next{
         color: #fff;
-      font-size:14px ;
        }
+       .swiper-button-prev:after, .swiper-button-next:after{
+        font-size: 20px !important;
+       }
+       .swiper-pagination-bullet-active{
+        color: #fff !important;
+        background-color: white !important;
+       }
+     
