--- a/css/main/specialProducts.css
+++ b/css/main/specialProducts.css
@@ -1,18 +1,22 @@
 .specialProducts-container{
     width: 100%;
-    min-height: 500px;
+    min-height: 420px;
     height: auto;
-    background: -webkit-linear-gradient(#d5d4d4  0%, #575758 100%);
+    background: -webkit-linear-gradient(#d5d4d4  0%, #323233 100%);
 }
 .product-card{
 background: white;
-width: 300px;
-height: 300px;
+width: 90%;
+aspect-ratio: 1 / 1;
 border-radius: 12px;
 display: flex;
-justify-content: center;
 align-items: center;
+padding: 10px;
 }
 .product-image{
-    
+/* object-fit: contain; */
+width: 100%;
+height: 85%;
+background-size: cover;
+background-position:center;
 }
