--- a/css/main/benefit.css
+++ b/css/main/benefit.css
@@ -8,7 +8,7 @@
   padding: 10px;
 }
 .selected-icon {
-  color: #ea6106;
+  color: #ff6a00;
   border-radius: 50%;
   background-color: #f9d8c2;
   padding: 10px;
