--- a/css/main/Categories.css
+++ b/css/main/Categories.css
@@ -2,8 +2,8 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background-size: cover;
-  background-position: center;
+  background-size: cover !important;
+  background-position: center !important;
 }
 .category-text {
   font-size: 12px;
