--- a/css/main/productComponent.css
+++ b/css/main/productComponent.css
@@ -1,20 +1,6 @@
-.product-bordered-card {
-  border: 1px solid #232f3e;
-  width: 100% !important ;
-  padding: 20px;
-  height: fit-content !important;
-  border-radius: 12px;
-  background: white;
-  text-align: start;
-}
-.product-title {
-  width: 75%;
-  text-align: start !important;
-}
-
 .product-card {
-  width: 300 !important;
-  height: 320px !important;
+  /* width: 280px !important; */
+  height: 280px !important;
   border-radius: 12px;
 }
 .product-card:hover {
@@ -30,65 +16,12 @@
   background-size: cover !important;
   background-position: center !important;
 }
-
 .carts-box {
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 12px;
   width: 80%;
   text-align: center;
-}
-@media screen and (max-width: 600px) {
-  .swiper-button-prev,
-  .swiper-button-next {
-    display: none;
-  }
-  .swiper-button-prev.swiper-button-disabled,
-  .swiper-button-next.swiper-button-disabled {
-    display: none;
-  }
-  .counter-box {
-    width: 100%;
-    height: 40px;
-  }
-  .successful-pic {
-    width: 350px;
-    height: 350px;
-  }
-  .product-title {
-    width: 100%;
-    text-align: center !important;
-  }
-  .product-bordered-card {
-    border: 1px solid #ccc;
-    width: 100% !important ;
-    height: max-content !important;
-    border-radius: 12px;
-    background: white;
-    text-align: center;
-  }
-  .productDetails-page {
-    background: rgb(248, 246, 246);
-    padding: 20px;
-    min-height: 100vh !important;
-    height: auto;
-  }
-  .product-card {
-    width: 320px !important;
-    height: 320px !important;
-  }
-  .product-image {
-    min-width: 250px !important;
-    height: 180px;
-    text-align: center;
-    vertical-align: middle;
-    padding: 5px;
-    padding-top: 10px;
-  }
-  .mySwiper {
-    height: 420px !important;
-    box-shadow: none !important;
-  }
 }
 .input-style {
   -webkit-align-items: center;
@@ -123,12 +56,6 @@
   display: flex !important;
   align-items: center !important;
 }
-.product-img {
-  width: 500px;
-  height: 500px;
-  background-size: cover;
-  background-position: center;
-}
 .rating-box {
   width: 90px;
   height: 30px;
@@ -141,4 +68,36 @@
   justify-content: center;
   font-weight: 450;
   margin-left: 10px;
+}
+@media screen and (max-width: 600px) {
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: none;
+  }
+  .swiper-button-prev.swiper-button-disabled,
+  .swiper-button-next.swiper-button-disabled {
+    display: none;
+  }
+  .productDetails-page {
+    background: rgb(248, 246, 246);
+    padding: 20px;
+    min-height: 100vh !important;
+    height: auto;
+  }
+  .product-card {
+    /* width: 200px !important; */
+    height: 200px !important;
+  }
+  .product-image {
+    min-width: 180px !important;
+    /* height: 180px;  */
+    text-align: center;
+    vertical-align: middle;
+    padding: 5px;
+    padding-top: 10px;
+  }
+  .mySwiper {
+    height: 420px !important;
+    box-shadow: none !important;
+  }
 }
