category color changed

--- a/css/main/Categories.css
+++ b/css/main/Categories.css
@@ -28,7 +28,7 @@
   vertical-align: middle;
 }
 .image-container {
-  background: -webkit-linear-gradient(left top, #ff6a00 0%, #031b70 100%);
+  background: -webkit-linear-gradient(left top, #ff6a00 0%, #919090 100%);
   width: 100px !important;
   height: 100px !important;
   border-radius: 1000px;
