--- a/css/main/mainSlider.css
+++ b/css/main/mainSlider.css
@@ -27,9 +27,9 @@ body {
   justify-content: center;
   align-items: center;
 }
-.mySwiper {
+.mainSwiper {
   width: 100%;
-  height: 500px;
+  height: 700px;
 }
 .swiper-image {
   width: 100% !important;
