--- a/css/main/productComponent.css
+++ b/css/main/productComponent.css
@@ -1,5 +1,4 @@
 .product-card {
-  /* width: 280px !important; */
   height: 280px !important;
   border-radius: 12px;
 }
@@ -16,13 +15,7 @@
   background-size: cover !important;
   background-position: center !important;
 }
-.carts-box {
-  background-color: white;
-  border: 1px solid #ccc;
-  border-radius: 12px;
-  width: 80%;
-  text-align: center;
-}
+
 .input-style {
   -webkit-align-items: center;
   -webkit-box-align: center;
@@ -51,6 +44,7 @@
   background-image: linear-gradient(to bottom right, #ff6a00, #232f3e);
   align-items: center !important;
   display: flex !important;
+
 }
 .swiper-slide {
   display: flex !important;
@@ -68,6 +62,10 @@
   justify-content: center;
   font-weight: 450;
   margin-left: 10px;
+}
+.swiper-button-prev.swiper-button-disabled,
+.swiper-button-next.swiper-button-disabled {
+  display: none;
 }
 @media screen and (max-width: 600px) {
   .swiper-button-prev,
