--- a/css/main/mainSlider.css
+++ b/css/main/mainSlider.css
@@ -29,7 +29,8 @@ body {
 }
 .mainSwiper {
   width: 100%;
-  height: 700px;
+  height: 400px;
+  object-fit: contain;
 }
 .swiper-image {
   width: 100% !important;
