--- a/css/singleProduct/singleProduct.css
+++ b/css/singleProduct/singleProduct.css
@@ -1,6 +1,6 @@
 .productDetails-box {
   width: 100%;
-  border: 1px solid #afadad;
+  /* border: 1px solid #afadad; */
   border-radius: 12px;
   display: flex !important;
 }
@@ -19,4 +19,10 @@
     height: 400px;
     background-position:center;
     background-size: cover;
+}
+.productDetails{
+  width: 100% !important;
+  border: 1px solid rgb(209, 12, 12);
+  border-radius: 12px;
+  height: 400px !important  ;
 }
